coq (8.0pl1-1) unstable; urgency=low

  * At least the version without QPL-licensed files is out,
    closes: #230356, #250497.

 -- Samuel Mimram <samuel.mimram@ens-lyon.org>  Sun, 18 Jul 2004 01:10:24 +0200

coq (8.0-1) unstable; urgency=low

  * New upstream release.
  * Libraries are now in separate packages (coq-libs and coq7-libs).
  * An additionnal package provides coqide.

 -- Samuel Mimram <samuel.mimram@ens-lyon.org>  Thu, 15 Jul 2004 17:35:00 +0200

coq (7.3.1-3) unstable; urgency=low

  * Added build-dependency on ocaml-best-compilers, check for opt compilers
    in the configure-stamp target of debian/rules. Thanks to Mike Furr for
    the patch (closes: #242761).
  * Converted changelog to UTF-8.

 -- Ralf Treinen <treinen@debian.org>  Fri,  9 Apr 2004 18:03:41 +0200

coq (7.3.1-2) unstable; urgency=low

  * Standards-Version 3.6.1.
  * File debian/compat instead of variable DH_COMPAT.
  * Build with ocaml-3.07.
  * Maintainers: debian-ocaml-maint, Uploaders: The Ocaml Gang.
  * Switch to dpatch system:
    - 01_ocaml307: patch by Hugo Herbelin (thanks!) for compilation with
      ocaml 3.07.
  * Removed timeout crutch which used to be necessary for ocaml 3.04.
  * Removed forcing of byte compilation on ppc.
  * debian/rules: some cosmetic changes.
  * Short description: capitalize first letter, drop terminal dot.

 -- Ralf Treinen <treinen@debian.org>  Tue,  7 Oct 2003 22:11:31 +0200

coq (7.3.1-1) unstable; urgency=low

  * New bugfix upstream version.
  * Proof General is now Recommended since he has been freed (closes:
    Bug#162894).

 -- Judicael Courant <Judicael.Courant@lri.fr>  Mon,  7 Oct 2002 12:34:03 +0200

coq (7.3-1) unstable; urgency=low

  * New upstream version.
 
 -- Judicael Courant <Judicael.Courant@lri.fr>  Wed, 22 May 2002 14:48:21 +0200

coq (7.2-9) unstable; urgency=low
  * ocamlc.opt completely broken on powerpc. Added a special case in
    "rules" for using only bytecode.
