@@ -2,6 +2,8 @@ coq (8.0pl1-1) unstable; urgency=low
 
   * At least the version without QPL-licensed files is out,
     closes: #230356, #250497.
+  * If compilation fails in opt, we try to build in byte (opt does not seem to
+    work on sparc).
 
  -- Samuel Mimram <samuel.mimram@ens-lyon.org>  Sun, 18 Jul 2004 01:10:24 +0200
 
